objects/Flosum__Metadata_Log__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Async_Request_Id__c</fullName>
        <description>Id of the retrieval or deployment request sent to Salesforce organisation</description>
        <label>Async Request Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flosum__Batch_Job_Id__c</fullName>
        <description>Job Id which is processing Metadata types and items</description>
        <label>Batch Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Error_Log__c</fullName>
        <label>Error Log</label>
        <length>32001</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Job_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show if the process related to deployment or retrieve has been completed or not for the current  Async request Id</description>
        <label>Job Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Metadata_Types__c</fullName>
        <label>Metadata Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Flosum__Organisation__c</referenceTo>
        <relationshipLabel>Metadata Logs</relationshipLabel>
        <relationshipName>Metadata_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Patch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patch</label>
        <referenceTo>Flosum__Patch__c</referenceTo>
        <relationshipLabel>Metadata Logs</relationshipLabel>
        <relationshipName>Metadata_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Process_Log__c</fullName>
        <description>Log detail of Deployment/Retrieval</description>
        <label>Process Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Process_Type__c</fullName>
        <description>Determine the process for which the log has been created</description>
        <label>Process Type</label>
        <picklist>
            <picklistValues>
                <fullName>Patch</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Validate</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Retrieve</fullName>
                <color>#A845DC</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flosum__Snapshot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Snapshot</label>
        <referenceTo>Flosum__Snapshot__c</referenceTo>
        <relationshipLabel>Metadata Logs</relationshipLabel>
        <relationshipName>Metadata_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flosum__Succeed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show if the job process completed with success or error</description>
        <label>Succeed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Success_Log__c</fullName>
        <label>Success Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Total_Items__c</fullName>
        <formula>IF( Flosum__Patch__c != null,  
                     IF(Flosum__Patch__r.Flosum__Total_Items_in_Patch__c &gt; 0 , Flosum__Patch__r.Flosum__Total_Items_in_Patch__c,  Flosum__Patch__r.Flosum__Total_Items_in_Patch_Repository__c ),
  Flosum__Snapshot__r.Flosum__No_of_Metadata_Items__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Metadata Log</label>
    <listViews>
        <fullName>Flosum__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ML-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Metadata Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>